tests/08-unrecognized-attribute.stderr
error: builder attribute not recognized
  --> tests/08-unrecognized-attribute.rs:22:15
   |
22 |     #[builder(eac = "arg")]
   |               ^^^
